--- a/app/src/main/res/layout/store_dialog.xml
+++ b/app/src/main/res/layout/store_dialog.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
+    android:orientation="vertical" android:layout_width="500dp"
     android:layout_height="wrap_content"
     android:background="#DA9C27B0">
 
@@ -53,7 +53,7 @@
     <GridView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:numColumns="3"
+        android:numColumns="4"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="50dp"
         android:background="#DF7F1B92"
