--- a/app/src/main/res/layout/store_dialog.xml
+++ b/app/src/main/res/layout/store_dialog.xml
@@ -2,24 +2,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="500dp"
     android:layout_height="wrap_content"
-    android:background="#DA9C27B0">
+    android:background="@drawable/store_dialog_background">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_alignParentTop="true"
-        android:layout_margin="10dp">
+        android:layout_margin="40dp">
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:src="@drawable/store_icon"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Магазин"
+            android:text="STORE"
+            android:layout_gravity="center"
+            android:id="@+id/store_textview"
             android:textColor="#fff"
             android:layout_marginLeft="5dp"
             android:textSize="20dp"/>
@@ -31,7 +33,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_alignParentRight="true"
-        android:layout_margin="10dp">
+        android:layout_margin="40dp">
 
         <ImageView
             android:layout_width="20dp"
@@ -44,9 +46,10 @@
             android:text="0"
             android:id="@+id/coins_dialog2"
             android:textColor="#F8E337"
+            android:layout_gravity="center"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="5dp"
-            android:textSize="16dp"/>
+            android:textSize="14dp"/>
 
     </LinearLayout>
 
@@ -56,17 +59,19 @@
         android:numColumns="4"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="50dp"
-        android:background="#DF7F1B92"
+        android:background="@drawable/screen_grid"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/grid_dialog2"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Выйти"
+        android:layout_width="75dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="30dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/exit_btn_background"
         android:id="@+id/btn_dialog_cancel"/>
 
 </RelativeLayout>
