--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,137 +7,41 @@
     android:background="@drawable/background_cosmo"
     tools:context=".MainActivity">
 
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_toLeftOf="@+id/score_layout"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="35dp">
+        android:orientation="vertical">
 
         <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/coin"
-            android:layout_toLeftOf="@id/redteam_coins_text"
-            android:layout_margin="5dp"/>
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="300"
-            android:textColor="#EEFFEB3B"
-            android:textSize="16dp"
-            android:gravity="center"
+            android:id="@+id/image_logo"
             android:layout_gravity="center"
-            android:textStyle="bold"
-            android:id="@+id/redteam_coins_text"/>
-    </LinearLayout>
+            android:src="@drawable/exit_btn_background"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/score_layout"
-        android:background="#46F7F7F7">
-
-        <TextView
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="100"
-            android:textColor="#E6F44336"
-            android:textSize="26dp"
-            android:textStyle="bold"
-            android:id="@+id/redteam_life_text"
-            android:layout_margin="5dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=":"
-            android:textColor="#EBF3F3F3"
-            android:textSize="30dp"
-            android:textStyle="bold"
-            android:layout_marginTop="5dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="100"
-            android:id="@+id/blueteam_life_text"
-            android:textColor="#F32196F3"
-            android:textSize="26dp"
-            android:textStyle="bold"
-            android:layout_margin="5dp"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_toRightOf="@+id/score_layout"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="35dp">
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/coin"
-            android:layout_margin="5dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="500"
-            android:textColor="#EEFFEB3B"
-            android:gravity="center"
+            android:text="START"
             android:layout_gravity="center"
-            android:textSize="16dp"
-            android:textStyle="bold"
-            android:id="@+id/blueteam_coins_text"/>
+            android:id="@+id/btn_startgame"/>
     </LinearLayout>
-
-
-    <GridView
-        android:layout_width="65dp"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:id="@+id/redteam_grid"
-        android:numColumns="1"
-        android:layout_marginTop="17dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginBottom="17dp"
-        android:stretchMode="columnWidth"
-        android:background="#90FF3729"
-        android:layout_centerVertical="true"/>
-
-    <GridView
-        android:layout_width="65dp"
-        android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:id="@+id/blueteam_grid"
-        android:numColumns="1"
-        android:layout_marginTop="17dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="17dp"
-        android:stretchMode="columnWidth"
-        android:background="#A62196F3"
-        android:layout_centerVertical="true"/>
 
     <Button
-        android:layout_width="52dp"
-        android:layout_height="26dp"
-        android:id="@+id/btn_pause"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SETTINGS"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/pause"/>
+        android:id="@+id/btn_settings"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="EXIT"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/btn_exit"/>
 
 </RelativeLayout>
